@@ -1,5 +1,6 @@
 Changes for 1.8.2
 
+ - [ZBX-2136] fixed handling of logitems with logtimefmt in db cache (asaveljevs)
  - [ZBX-2193] updated Russian translation; thanks to dotneft (Richlv)
  - [ZBX-2185] added view of parent template of linked template to host (Aly)
  - [ZBX-2179] fixed errors connected with Triggers Info screen element (Vedmak)
